# ipykernel-duckdb

./: .gitignore  LICENSE  README.md  duckdb_shell.py  ipykernel_duckdb.py  setup.cfg  streamlit_notebook.py  table_container.py  table_control.py
examples/: demo.ipynb
ipykernel_duckdb/: __main__.py  ipykernel_duckdb.py
share/jupyter/kernels/ipykernel_duckdb/: kernel.json
tests/: test_completion.py
