[metadata]
name = ipykernel-duckdb
version = 0.0.1
description = A duckdb-aware wrapper of the IPython Jupyter kernel
long_description = file: README.md
long_description_content_type = text/markdown
license = 
author = Eero Lihavainen
author_email = eero.lihavainen@gmail.com
url = https://github.com/eeroel/ipykernel-duckdb
platforms = Windows, Linux, Mac OS X
keywords = jupyter, ipython, duckdb, sql

[options]
py_modules = ipykernel_duckdb
python_requires = >=3.8

install_requires =
    duckdb
    ipykernel
    pandas

[options.data_files]
share/jupyter/kernels/ipykernel_duckdb = share/jupyter/kernels/ipykernel_duckdb/kernel.json
